@@ -28,7 +28,7 @@ CVolcraftCO20::~CVolcraftCO20(void)
 
 void CVolcraftCO20::Init()
 {
-	m_LastPollTime=time(NULL)-VolcraftCO20_POLL_INTERVAL+2;
+	m_LastPollTime=mytime(NULL)-VolcraftCO20_POLL_INTERVAL+2;
 }
 
 bool CVolcraftCO20::StartHardware()
@@ -64,11 +64,11 @@ void CVolcraftCO20::Do_Work()
 	while (!m_stoprequested)
 	{
 		boost::this_thread::sleep(boost::posix_time::seconds(1));
-		atime=time(NULL);
+		atime=mytime(NULL);
 		if (atime-m_LastPollTime>=VolcraftCO20_POLL_INTERVAL)
 		{
 			GetSensorDetails();
-			m_LastPollTime=time(NULL);
+			m_LastPollTime=mytime(NULL);
 		}
 	}
 	_log.Log(LOG_NORM,"Voltcraft CO-20 CO-20: Worker stopped...");
