@@ -57,7 +57,7 @@ void CWunderground::Do_Work()
 	while (!m_stoprequested)
 	{
 		boost::this_thread::sleep(boost::posix_time::seconds(1));
-		time_t atime=time(NULL);
+		time_t atime=mytime(NULL);
 		struct tm ltime;
 		localtime_r(&atime,&ltime);
 		if ((ltime.tm_min/10!=m_LastMinute))
