@@ -1,6 +1,8 @@
 #include "stdafx.h"
 #include "localtime_r.h"
 
+time_t m_lasttime=0;
+
 #ifndef localtime_r
 struct tm *localtime_r(const time_t *timep, struct tm *result)
 {
@@ -16,3 +18,11 @@ struct tm *localtime_r(const time_t *timep, struct tm *result)
 }
 #endif
 
+time_t mytime(time_t * _Time)
+{
+	time_t acttime=time(_Time);
+	if (acttime<m_lasttime)
+		return m_lasttime;
+	m_lasttime=acttime;
+	return acttime;
+}
