@@ -20,6 +20,7 @@ Version 1.0.xxx (August xxth 2013)
 - Implemented: Option to Restart/Shutdown the system
 - Implemented: Option to update to Stable or Beta versions
 - Changed: webupdate for armv7l (cubieboard2)
+- Implemented: time safeguard (for systems without RTC)
 
 Version 1.0.940 (July 31th 2013)
 - Implemented: Lighting2, when a Group On/Off is received, all switched with the same ID will be set to 'On' or 'Off' (internally)
